<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
	<LinearLayout
	    android:orientation="vertical"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:padding="10dp">
	    <TextView android:id="@+id/choose_wolfdir_label"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/choose_wolfdir_label"
	        android:textSize="16sp"/>
	    <View android:id="@+id/separator1"
	        android:layout_width="match_parent"
	        android:layout_height="1px"
	        android:background="@android:color/darker_gray"/>
	    <TextView android:id="@+id/current_wolfdir"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="10dp"
	        android:text="@string/not_chosen_label"
	        android:textSize="20sp"/>
	    <Button android:id="@+id/choose_wolfdir_button"
	        android:layout_width="wrap_content"
	        android:layout_height="48dp"
	        android:layout_marginTop="10dp"
	        android:paddingLeft="30dp"
	        android:paddingRight="30dp"
	        android:text="@string/choose_wolfdir_button"/>
	    <TextView android:id="@+id/warp_label"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="20dp"
	        android:text="@string/warp_label"
	        android:textSize="16sp"/>
	    <View android:id="@+id/separator2"
	        android:layout_width="match_parent"
	        android:layout_height="1px"
	        android:background="@android:color/darker_gray"/>
	    <EditText android:id="@+id/warp_field"
	        android:layout_width="match_parent"
	        android:layout_height="48dp"
	        android:inputType="number"
	        android:hint="@string/warp_field_hint"/>
	    <TextView android:id="@+id/skill_label"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="20dp"
	        android:text="@string/skill_label"
	        android:textSize="16sp"/>
	    <View android:id="@+id/separator3"
	        android:layout_width="match_parent"
	        android:layout_height="1px"
	        android:background="@android:color/darker_gray"/>
	    <RadioGroup android:id="@+id/skill_group"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical">
	        <RadioButton android:id="@+id/baby_button"
	            android:layout_width="wrap_content"
	            android:layout_height="48dp"
	            android:text="@string/baby_button"/>
	        <RadioButton android:id="@+id/easy_button"
	            android:layout_width="wrap_content"
	            android:layout_height="48dp"
	            android:text="@string/easy_button"/>
	        <RadioButton android:id="@+id/medium_button"
	            android:layout_width="wrap_content"
	            android:layout_height="48dp"
	            android:text="@string/medium_button"/>
	        <RadioButton android:id="@+id/hard_button"
	            android:layout_width="wrap_content"
	            android:layout_height="48dp"
	            android:text="@string/hard_button"/>
	    </RadioGroup>
	    <Button android:id="@+id/start_button"
	        android:layout_width="wrap_content"
	        android:layout_height="48dp"
	        android:layout_marginTop="10dp"
	        android:paddingLeft="30dp"
	        android:paddingRight="30dp"
	        android:text="@string/start_button"/>
	</LinearLayout>
</ScrollView>

